Correccion del home

--- a/css/styleCustom.css
+++ b/css/styleCustom.css
@@ -10,7 +10,9 @@ header {
 }
  
 .titulo {
-    margin-top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Estilos */
