--- a/css/styleCustom.css
+++ b/css/styleCustom.css
@@ -21,6 +21,15 @@ header {
     padding: 15px;
 }
 
+.centradoVertical {
+    text-align: center;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
 .octocat {
     width: 300px;
 }
